--- a/src/poker/version_text/view/poker.css
+++ b/src/poker/version_text/view/poker.css
@@ -8,24 +8,28 @@
 #controlArea {
     -fx-spacing: 15.0px;
     -fx-padding: 5.0px;
-    -fx-border-color: black;
+    -fx-border-color: green;
     -fx-border-width: 2.0px;
 }
 
 .player {
+	-fx-font-size:20px;
 	-fx-padding: 5.0px;
-    -fx-border-color: black;
+    -fx-border-color: green;
     -fx-border-width: 2.0px;
+    -fx-background-color: lightgrey;
 }
 
 .card {
   -fx-font-size: 18px;
 	-fx-padding: 2.0px;
-    -fx-border-color: black;
+    -fx-border-color: green;
     -fx-border-width: 1.0px;
-	-fx-background-color: lemonchiffon;
+	-fx-background-color: white;
     -fx-min-width: 50;
     -fx-max-width: 500;
     -fx-min-height: 80;
     -fx-max-height: 800;
+}
+
 }
