--- a/src/poker/version_text/view/poker.css
+++ b/src/poker/version_text/view/poker.css
@@ -17,8 +17,9 @@
 	-fx-padding: 5.0px;
     -fx-border-color: green;
     -fx-border-width: 2.0px;
-    -fx-background-color: lightgrey;
-}
+    -fx-background-size: 450;
+    -fx-background-image: url("https://us.123rf.com/450wm/yamabikay/yamabikay1612/yamabikay161200085/69448418-poker-table-felt-background-high-resolution-photo-.jpg?ver=6")
+	}
 
 .card {
   -fx-font-size: 18px;
@@ -30,5 +31,6 @@
     -fx-max-width: 500;
     -fx-min-height: 80;
     -fx-max-height: 800;
+    -fx-effect: dropshadow(three-pass-box, black, 10, 0.5, 0, 0); 
 }
 
