--- a/src/poker/version_text/view/poker.css
+++ b/src/poker/version_text/view/poker.css
@@ -15,14 +15,15 @@
 .player {
 	-fx-font-size:20px;
 	-fx-padding: 5.0px;
-    -fx-border-color: green;
+	
     -fx-border-width: 2.0px;
     -fx-background-size: 450;
     -fx-background-image: url("https://us.123rf.com/450wm/yamabikay/yamabikay1612/yamabikay161200085/69448418-poker-table-felt-background-high-resolution-photo-.jpg?ver=6")
 	}
 
 .card {
-  -fx-font-size: 18px;
+ 	-fx-font-size: 18px;
+  	-fx-text-fill: white;
 	-fx-padding: 2.0px;
     -fx-border-color: green;
     -fx-border-width: 1.0px;
