--- a/src/poker/version_text/view/poker.css
+++ b/src/poker/version_text/view/poker.css
@@ -15,15 +15,13 @@
 .player {
 	-fx-font-size:20px;
 	-fx-padding: 5.0px;
-	
+    -fx-border-color: green;
     -fx-border-width: 2.0px;
-    -fx-background-size: 450;
-    -fx-background-image: url("https://us.123rf.com/450wm/yamabikay/yamabikay1612/yamabikay161200085/69448418-poker-table-felt-background-high-resolution-photo-.jpg?ver=6")
-	}
+    -fx-background-color: lightgrey;
+}
 
 .card {
- 	-fx-font-size: 18px;
-  	-fx-text-fill: white;
+  -fx-font-size: 18px;
 	-fx-padding: 2.0px;
     -fx-border-color: green;
     -fx-border-width: 1.0px;
@@ -32,6 +30,5 @@
     -fx-max-width: 500;
     -fx-min-height: 80;
     -fx-max-height: 800;
-    -fx-effect: dropshadow(three-pass-box, black, 10, 0.5, 0, 0); 
 }
 
